[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "whool"
description = "whool - build backend for Odoo addons"
readme = "README.md"
authors = [
  {name = "Stéphane Bidoul", email = "stephane.bidoul@acsone.eu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Framework :: Odoo",
]
requires-python = ">=3.6"
dependencies = [
    "manifestoo-core[metadata]>=0.8",
    "tomli; python_version<'3.11'",
    "wheel==0.37.1",  # pin because we use an undocumented feature
    "importlib_metadata; python_version<'3.8'",
]
scripts = {whool = "whool.cli:main"}
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage[toml]",
    "mypy",
]
doc = [
    "sphinx",
    "furo",
    "myst-parser",
    "towncrier",
    "sphinxcontrib-towncrier",
]

[project.urls]
Homepage = "https://github.com/acsone/whool"
Documentation = "https://whool.readthedocs.io/en/stable/"
Changelog = "https://whool.readthedocs.io/en/stable/changelog.html"
Source = "https://github.com/acsone/whool"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    "/.github",
]


[tool.isort]
profile = 'black'

[tool.mypy]
strict = true

[tool.coverage.run]
branch = true
source_pkgs = ["whool"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
]

[tool.towncrier]
package = "manifestoo_core"
package_dir = "src"
filename = "HISTORY.rst"
directory = "news"
issue_format = "`#{issue} <https://github.com/sbidoul/manifestoo-core/issues/{issue}>`_"
title_format = "{version} ({project_date})"
