[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "whool"
description = "whool - build backend for Odoo addons"
readme = "README.md"
authors = [
  {name = "Stéphane Bidoul", email = "stephane.bidoul@acsone.eu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Framework :: Odoo",
]
requires-python = ">=3.7"
dependencies = [
    "manifestoo-core>=1.0",
    "wheel",
    "tomli; python_version<'3.11'",
    "importlib_metadata; python_version<'3.8'",
]
scripts = {whool = "whool.cli:main"}
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage[toml]",
    "mypy",
]
doc = [
    "sphinx",
    "furo",
    "myst-parser",
    "towncrier",
    "sphinxcontrib-towncrier",
]

[project.urls]
Homepage = "https://github.com/acsone/whool"
Documentation = "https://whool.readthedocs.io/en/stable/"
Changelog = "https://whool.readthedocs.io/en/stable/changelog.html"
Source = "https://github.com/acsone/whool"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    "/.github",
]


[tool.mypy]
strict = true
show_error_codes = true


[tool.coverage.run]
branch = true
source_pkgs = ["whool"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
]


[tool.towncrier]
package = "manifestoo_core"
package_dir = "src"
filename = "HISTORY.rst"
directory = "news"
issue_format = "`#{issue} <https://github.com/sbidoul/manifestoo-core/issues/{issue}>`_"
title_format = "{version} ({project_date})"


[tool.ruff]
fix = true
select = [
    "E", "F", "W", "C90", "B", "I", "UP", "RUF", "TCH"
]
target-version = "py37"

[tool.ruff.per-file-ignores]
"__main__.py" = ["B008"]

[tool.ruff.mccabe]
max-complexity = 13

[tool.ruff.isort]
known-first-party = ["whool"]
combine-as-imports = true
